--- a/style.css
+++ b/style.css
@@ -1,1 +1,213 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
+* {
+  margin: 0;
+}
+
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+#root,
+#__next {
+  isolation: isolate;
+}
+
+:root {
+  --backgroundColor: hsl(174, 62%, 47%, 0.04);
+  --form-wrapper-bg: hsl(0, 0%, 100%);
+  --gray-text: hsl(0, 0%, 45%);
+  --light-gray: hsl(0, 0%, 94%);
+  --green-color: hsl(174, 62%, 47%);
+}
+
+body {
+  background-color: var(--backgroundColor);
+}
+
+.wrapper {
+  font-family: lato, sans-serif;
+  display: flex;
+  gap: 120px;
+  padding-inline-start: 140px;
+  padding-inline-end: 140px;
+}
+
+section.section {
+  flex: 1;
+}
+
+.left_content p {
+  color: var(--gray-text);
+}
+
+.logo {
+  width: 80px;
+  margin-inline-start: -8px;
+  padding-block-start: 204px;
+  margin-block-end: 50px;
+}
+
+.left_content h1 {
+  margin-block-end: 20px;
+}
+
+div.right_content {
+  margin-block-start: 81px;
+}
+
+div.form-wrapper {
+  background-color: var(--form-wrapper-bg);
+  padding-block-start: 40px;
+  padding-block-end: 40px;
+  padding-inline-start: 40px;
+  padding-inline-end: 40px;
+  margin-block-end: 80px;
+  border-radius: 6px;
+  box-shadow: 0px 4px 50px 0px hsla(224, 65%, 5%, 0.1);
+
+}
+
+form {
+  min-width: 300px;
+}
+
+input,
+select,
+button {
+  width: 100%;
+  height: 48px;
+}
+
+input,
+select {
+  margin-block-end: 30px;
+  font-size: 14px;
+  padding-inline-start: 16px;
+  padding-block-start: 14px;
+  padding-block-end: 14px;
+  background-color: #fff;
+  border: 2px solid var(--light-gray);
+  border-radius: 2px;
+}
+
+input:focus,
+select:focus {
+  border: 2px solid var(--green-color);
+  outline: none;
+}
+
+select,
+.date {
+  color: var(--gray-text);
+}
+
+label {
+  display: block;
+  margin-block-end: 10px;
+  letter-spacing: 0.1px;
+  font-size: 14px;
+}
+
+label,
+button {
+  font-weight: 700;
+}
+
+div.flex-split-sides {
+  display: flex;
+  gap: 24px;
+}
+
+div.form-container {
+  flex: 1;
+}
+
+button {
+  margin-block-end: 16px;
+  letter-spacing: 0.2px;
+  font-size: 16px;
+  background-color: var(--green-color);
+  border: none;
+  border-radius: 2px;
+  color: var(--form-wrapper-bg);
+  box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.10);
+}
+
+.form-wrapper p {
+  text-align: center;
+}
+
+input::placeholder {
+  font-size: 14px;
+  color: var(--gray-text);
+}
+
+a {
+  color: var(--green-color);
+  font-size: 14px;
+}
+
+@media (max-width: 600px) {
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    /* gap: 0; */
+    padding-inline-start: 24px;
+    padding-inline-end: 24px;
+  }
+
+  div.flex-split-sides {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+  }
+
+  .logo {
+    padding-block-start: 74px;
+    margin-block-end: 40px;
+  }
+
+  div.right_content {
+    margin-block-start: -80px;
+  }
+
+  div.form-wrapper {
+    padding-block-start: 24px;
+    padding-block-end: 24px;
+    padding-inline-start: 16px;
+    padding-inline-end: 16px;
+    margin-block-end: 64px;
+  }
+}
